--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Discover the enchanting story of Alchemy Aleworks, where passion for craft beer led from a humble garage to a thriving brewery. Explore our artisanal brews, merchandise, and inviting taproom.">
+  <meta name="keywords" content="Alchemy Aleworks, craft beer, brewery, artisanal beer, brewpub, beer merchandise, taproom, local brewery, brewing journey">
   {% endblock %}
 
   <!-- Additional Meta Tags -->
@@ -21,7 +25,6 @@
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/icons/apple-touch-icon.png' %}">
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/icons/favicon-32x32.png' %}">
   <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/icons/favicon-16x16.png' %}">
-  <!-- <link rel="manifest" href="/site.webmanifest"> -->
   
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -433,9 +436,9 @@
 
         <!-- Social Links -->
         <div class="col-6 col-lg-2 text-right align-content-center py-3">
-          <a class="mr-3 text-white" href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
-          <a class="mr-3 text-white" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-          <a class="text-white" href="https://x.com/"><i class="fa-brands fa-twitter"></i></a>
+          <a class="mr-3 text-white" href="https://www.facebook.com/" target="_blank" rel="noopener"><i class="fa-brands fa-square-facebook"></i></a>
+          <a class="mr-3 text-white" href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+          <a class="text-white" href="https://x.com/" target="_blank" rel="noopener"><i class="fa-brands fa-twitter"></i></a>
         </div>
       </div>
 
