--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block additional_css %}
+<!-- Include custom checkout CSS -->
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
@@ -9,22 +10,27 @@
 
 {% block content %}
 <div class="overflow-hidden position-relative py-4 bg-gray">
+    <!-- Thank You Message Section -->
     <div class="text-center text-uppercase col-12">
         <h3 class="mb-3">Thank You</h2>
             <hr class="bg-black my-0">
+            <!-- Confirmation Message -->
             <p class="mt-3 mb-0">You can find your order details below. We'll email a confirmation to
                 <strong>{{ order.customer_email }}</strong>.</p>
     </div>
 </div>
 
+<!-- Order Details Section -->
 <div class="col-12 col-lg-6 offset-lg-3 p-3">
     <div class="order-confirmation-wrapper p-2 border-black text-black">
+        <!-- Order Info Section -->
         <div class="row">
             <div class="col">
                 <small class="text-muted text-uppercase">Order Info:</small>
             </div>
         </div>
 
+        <!-- Order Number -->
         <div class="row">
             <div class="col-12 col-md-4">
                 <p class="mb-0">Order Number</p>
@@ -34,6 +40,7 @@
             </div>
         </div>
 
+        <!-- Order Date -->
         <div class="row">
             <div class="col-12 col-md-4">
                 <p class="mb-0">Order Date</p>
@@ -43,12 +50,14 @@
             </div>
         </div>
 
+        <!-- Order Details Section -->
         <div class="row">
             <div class="col">
                 <small class="text-muted text-uppercase">Order Details:</small>
             </div>
         </div>
 
+        <!-- Beer Line Items -->
         {% for beer_item in order.beer_line_items.all %}
         <div class="row">
             <div class="col-12 col-md-4">
@@ -62,6 +71,7 @@
         </div>
         {% endfor %}
 
+        <!-- Merchandise Line Items -->
         {% for merch_item in order.merch_line_items.all %}
         <div class="row">
             <div class="col-12 col-md-4">
@@ -76,12 +86,14 @@
         </div>
         {% endfor %}
 
+        <!-- Delivery Details Section -->
         <div class="row">
             <div class="col">
                 <small class="text-muted text-uppercase">Delivering To:</small>
             </div>
         </div>
 
+        <!-- Customer Name -->
         <div class="row">
             <div class="col-12 col-md-4">
                 <p class="mb-0">Full Name</p>
@@ -91,6 +103,7 @@
             </div>
         </div>
 
+        <!-- Address 1 -->
         <div class="row">
             <div class="col-12 col-md-4">
                 <p class="mb-0">Address 1</p>
@@ -100,6 +113,7 @@
             </div>
         </div>
 
+        <!-- Address 2 (if available) -->
         {% if order.customer_address2 %}
         <div class="row">
             <div class="col-12 col-md-4">
@@ -111,6 +125,7 @@
         </div>
         {% endif %}
 
+        <!-- County (if available) -->
         {% if order.county %}
         <div class="row">
             <div class="col-12 col-md-4">
@@ -122,6 +137,7 @@
         </div>
         {% endif %}
 
+        <!-- City -->
         <div class="row">
             <div class="col-12 col-md-4">
                 <p class="mb-0">City</p>
@@ -131,6 +147,7 @@
             </div>
         </div>
 
+        <!-- Postcode (if available) -->
         {% if order.customer_postcode %}
         <div class="row">
             <div class="col-12 col-md-4">
@@ -142,6 +159,7 @@
         </div>
         {% endif %}
 
+        <!-- Country -->
         <div class="row">
             <div class="col-12 col-md-4">
                 <p class="mb-0">Country</p>
@@ -151,6 +169,7 @@
             </div>
         </div>
 
+        <!-- Phone Number -->
         <div class="row">
             <div class="col-12 col-md-4">
                 <p class="mb-0">Phone Number</p>
@@ -160,12 +179,14 @@
             </div>
         </div>
 
+        <!-- Billing Info Section -->
         <div class="row">
             <div class="col">
                 <small class="text-muted text-uppercase">Billing Info:</small>
             </div>
         </div>
 
+        <!-- Order Total -->
         <div class="row">
             <div class="col-12 col-md-4">
                 <p class="mb-0">Order Total</p>
@@ -175,6 +196,7 @@
             </div>
         </div>
 
+        <!-- Delivery Fee -->
         <div class="row">
             <div class="col-12 col-md-4">
                 <p class="mb-0">Delivery</p>
@@ -184,6 +206,7 @@
             </div>
         </div>
 
+        <!-- Grand Total -->
         <div class="row">
             <div class="col-12 col-md-4">
                 <p class="mb-0">Grand Total</p>
@@ -194,6 +217,7 @@
         </div>
     </div>
 
+    <!-- Back to Profile Button (if from profile) -->
     {% if from_profile %}
         <div class="text-right mt-3">
             <a href="{% url 'profile' %}" class="btn-gray mr-0">
