Added comments and docstrings to the home and inventory apps

--- a/inventory/static/inventory/css/inventory.css
+++ b/inventory/static/inventory/css/inventory.css
@@ -1,3 +1,5 @@
+/* Derived from Boutique Ado project with modifications */
+
 #add-beer-form .form-control,
 #add-merch-item-form .form-control {
     color: #000000;
