--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,6 +4,7 @@
 {% block extended_title %}| Home{% endblock %}
 
 {% block content %}
+<!-- Hero Section -->
 <div class="overflow-hidden position-relative hero-section">
   <img src="/static/images/hero.jpg" alt="Hero Image" class="h-100 w-100 hero-image">
   <div class="overlay position-absolute h-100 w-100"></div>
@@ -14,6 +15,7 @@
   </div>
 </div>
 
+<!-- Limited Edition Brews Section -->
 <div class="overflow-hidden position-relative py-4 product-section">
   <div class="text-center text-uppercase col-12 product-content">
     <h3 class="mb-3">Limited Edition Brews</h3>
@@ -39,6 +41,7 @@
   </div>
 </div>
 
+<!-- Taproom Gallery Section -->
 <div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content gallery-section">
   <img src="/static/images/taproom/taproom1.jpg" alt="Taproom Image 1"
     class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 gallery-image">
@@ -52,6 +55,7 @@
   </div>
 </div>
 
+<!-- Our Story Section -->
 <div class="overflow-hidden position-relative py-4 col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3 info-section">
   <div class="text-center col-12 info-content">
     <h3 class="mb-3 text-uppercase">Our Story</h3>
@@ -66,6 +70,7 @@
   </div>
 </div>
 
+<!-- Merchandise Section -->
 <div class="overflow-hidden position-relative py-4 bg-gray product-section">
   <div class="text-center text-uppercase col-12 product-content">
     <h3 class="mb-3">Our Merchandise</h3>
