--- a/inventory/templates/inventory/add_beer.html
+++ b/inventory/templates/inventory/add_beer.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block additional_css %}
+<!-- Additional CSS specific to inventory -->
     <link rel="stylesheet" href="{% static 'inventory/css/inventory.css' %}">
 {% endblock %}
 
@@ -9,31 +10,38 @@
 
 {% block content %}
 <div class="overflow-hidden position-relative text-black py-4 bg-gray">
+    <!-- Product Management Header -->
     <div class="row">
         <div class="text-center text-uppercase col-12">
             <h3 class="mb-3">Product Management</h3>
             <hr class="bg-black my-0">
         </div>
     </div>
+    <!-- Form Section to Add a Beer -->
     <div class="row mt-3">
         <div class="col-12 col-lg-6 offset-lg-3">
             <p class="text-uppercase px-4 mb-0 mb-lg-2">Add a Beer</p>
+            <!-- Add Beer Form -->
             <form action="{% url 'add_beer' %}" method="POST" class="mt-3 px-3" id="add-beer-form">
                 {% csrf_token %}
                 {% for field in form %}
                     {% if field.name != 'image' %}
+                        <!-- Render all fields except for the image field using crispy forms -->
                         {{ field | as_crispy_field }}
                     {% else %}
+                        <!-- Render the image field as it is -->
                         {{ field }}
                     {% endif %}
                 {% endfor %}
                 <div class="mt-3">
+                    <!-- Back to Beers Link -->
                     <a href="{% url 'beers' %}" class="btn-gray text-white mx-0">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
                         <span>Back to Beers</span>
                     </a>
+                    <!-- Submit Button -->
                     <button class="btn-gray float-right mr-0">Add</button>
                 </div>
             </form>
@@ -43,8 +51,10 @@
 {% endblock %}
 
 {% block end_js %}
+    <!-- Extend base.js scripts -->
     {{ block.super }}
     <script type="text/javascript">
+        // JavaScript to handle image file change event
         $('#new-image').change(function() {
             var file = $('#new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
