--- a/inventory/templates/inventory/edit_merch.html
+++ b/inventory/templates/inventory/edit_merch.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block additional_css %}
+    <!-- Include custom CSS for styling this specific page -->
     <link rel="stylesheet" href="{% static 'inventory/css/inventory.css' %}">
 {% endblock %}
 
@@ -9,24 +10,31 @@
 
 {% block content %}
 <div class="overflow-hidden position-relative text-black py-4 bg-gray">
+    <!-- Product Management Section -->
     <div class="row">
         <div class="text-center text-uppercase col-12">
             <h3 class="mb-3">Product Management</h3>
             <hr class="bg-black my-0">
         </div>
     </div>
+
+    <!-- Form Section -->
     <div class="row mt-3">
         <div class="col-12 col-lg-6 offset-lg-3">
             <p class="text-uppercase px-4 mb-0 mb-lg-2">Edit a Merch Item</p>
+            <!-- Form for editing a merch item -->
             <form action="{% url 'edit_merch' merch.id %}" method="POST" class="mt-3 px-3" id="add-merch-item-form">
                 {% csrf_token %}
                 {% for field in form %}
                     {% if field.name != 'image' %}
+                        <!-- Render non-image fields using crispy forms -->
                         {{ field | as_crispy_field }}
                     {% else %}
+                        <!-- Render image field separately -->
                         {{ field }}
                     {% endif %}
                 {% endfor %}
+                <!-- Buttons for navigation and submission -->
                 <div class="mt-3">
                     <a href="{% url 'merch' %}" class="btn-gray text-white mx-0">
                         <span class="icon">
@@ -43,7 +51,9 @@
 {% endblock %}
 
 {% block end_js %}
+    <!-- Include base.js from parent block -->
     {{ block.super }}
+    <!-- JavaScript for handling image file selection -->
     <script type="text/javascript">
         $('#new-image').change(function() {
             var file = $('#new-image')[0].files[0];
