--- a/inventory/templates/inventory/merch_detail.html
+++ b/inventory/templates/inventory/merch_detail.html
@@ -7,47 +7,62 @@
 <div class="overflow-hidden position-relative py-5 bg-gray">
   <div class="text-center text-uppercase col-12">
     <div class="d-flex flex-wrap justify-content-center align-items-center my-3">
+      <!-- Left Column: Merch Image -->
       <div class="col-12 col-lg-5 col-xl-4 d-flex d-flex-column px-5 px-lg-0 mx-sm-4 h-100 large-product-container">
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
+          <!-- Display merch item image or default image -->
           {% if merch.image %}
           <img src="{{ merch.image.url }}" class="card-img-top border-black large-product-image" alt="{{ merch.name }}">
           {% else %}
-          <img src="{{ MEDIA_URL }}merch/no_merch.webp" class="card-img-top border-black large-product-image" alt="{{ merch.name }}">
+          <img src="{{ MEDIA_URL }}merch/no_merch.webp" class="card-img-top border-black large-product-image"
+            alt="{{ merch.name }}">
           {% endif %}
         </div>
       </div>
+      <!-- Right Column: Merch Details and Form -->
       <div class="col-12 col-lg-5 col-xl-4 d-flex d-flex-column mx-sm-4 h-100 large-product-container">
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
           <div class="card-body p-0 mt-3">
+            <!-- Display merch name -->
             <h3 class="card-title mb-3">{{ merch.name }}</h3>
             <hr class="bg-black my-0">
+            <!-- Display merch description -->
             <p class="card-text mt-3">{{ merch.description }}</p>
           </div>
           <div class="card-body p-0 mb-3">
+            <!-- Display merch price -->
             <p class="card-text">£{{ merch.price }}</p>
           </div>
 
+          <!-- Form for adding merch to cart -->
           <div class="card-body p-0 mb-3 d-flex align-items-center">
-            <form action="{% url 'add_to_bag' 'merch' merch.id %}" method="POST" class="d-flex align-items-center justify-content-center flex-wrap">
+            <form action="{% url 'add_to_bag' 'merch' merch.id %}" method="POST"
+              class="d-flex align-items-center justify-content-center flex-wrap">
               {% csrf_token %}
+              <!-- If merch is a sized item, display size selector -->
               {% if merch.sized_item %}
-                <div class="col-12 p-0 my-3">
-                  <p class="card-text text-uppercase d-inline mr-2">Size:</p>
-                  <select name="product_size" id="id_product_size" class="font-weight-normal text-right form-select rounded-0 border-black text-small">
-                    <option value="xs">XS</option>
-                    <option value="s">S</option>
-                    <option value="m" selected>M</option>
-                    <option value="l">L</option>
-                    <option value="xl">XL</option>
-                  </select>
-                </div>
+              <div class="col-12 p-0 my-3">
+                <p class="card-text text-uppercase d-inline mr-2">Size:</p>
+                <select name="product_size" id="id_product_size"
+                  class="font-weight-normal text-right form-select rounded-0 border-black text-small">
+                  <option value="xs">XS</option>
+                  <option value="s">S</option>
+                  <option value="m" selected>M</option>
+                  <option value="l">L</option>
+                  <option value="xl">XL</option>
+                </select>
+              </div>
               {% endif %}
+              <!-- Quantity input field -->
               <p class="card-text text-uppercase my-0">Quantity:</p>
-              <input class="form-control rounded-0 border-black mx-3 text-small" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ merch.id }}" id="id_qty_{{ merch.id }}" style="width: 60px;">
+              <input class="form-control rounded-0 border-black mx-3 text-small" type="number" name="quantity" value="1"
+                min="1" max="99" data-item_id="{{ merch.id }}" id="id_qty_{{ merch.id }}" style="width: 60px;">
+              <!-- Add to Cart button -->
               <input type="submit" class="btn-gray form-control-button mx-0" value="Add to Cart">
               <input type="hidden" name="redirect_url" value="{{ request.path }}">
             </form>
           </div>
+          <!-- Display edit and delete links for superusers -->
           {% if request.user.is_superuser %}
           <div>
             <small class="font-weight-bold">
@@ -65,21 +80,29 @@
 
 <div class="overflow-hidden position-relative py-4 product-section">
   <div class="text-center text-uppercase col-12 product-content">
+    <!-- Section Title -->
     <h3 class="mb-3">You Might Also Like</h3>
     <hr class="bg-black my-0">
     <div class="col-12 col-lg-8 d-flex flex-wrap flex-lg-nowrap justify-content-center mt-3 mx-auto">
       {% for merch in random_merch %}
-      <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
+      <!-- Merch Card -->
+      <div
+        class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
         <a href="{% url 'merch_detail' merch.id %}" class="text-black hover-gray">
           <div class="card border-0 align-items-center">
+            <!-- Display merch item image or default image -->
             {% if merch.image %}
-            <img src="{{ merch.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ merch.name }}">
+            <img src="{{ merch.image.url }}" class="card-img-top border-black my-2 product-image"
+              alt="{{ merch.name }}">
             {% else %}
-            <img src="{{ MEDIA_URL }}merch/no_merch.webp" class="card-img-top border-black my-2 product-image" alt="{{ merch.name }}">
+            <img src="{{ MEDIA_URL }}merch/no_merch.webp" class="card-img-top border-black my-2 product-image"
+              alt="{{ merch.name }}">
             {% endif %}
             <div class="card-body p-0">
+              <!-- Display merch name -->
               <h5 class="card-title mb-2">{{ merch.name }}</h5>
               <hr class="bg-black my-0">
+              <!-- Display merch price -->
               <p class="card-text mt-2">£{{ merch.price }}</p>
             </div>
           </div>
@@ -87,6 +110,7 @@
       </div>
       {% endfor %}
     </div>
+    <!-- Link back to main merch page -->
     <a class="btn-gray" href="{% url 'merch' %}">Back to Merch</a>
   </div>
 </div>
