--- a/inventory/templates/inventory/search_results.html
+++ b/inventory/templates/inventory/search_results.html
@@ -4,19 +4,23 @@
 
 {% block content %}
 <div class="overflow-hidden position-relative py-4 my-0 bg-gray">
+    <!-- Header for displaying search query -->
     <h3 class="mx-3">Search Results for "{{ query }}"</h3>
 </div>
 
+<!-- Beers Section -->
 <div class="overflow-hidden position-relative pt-4">
     <div class="text-center text-uppercase col-12">
         <h3 class="mb-3">Beers</h3>
         <hr class="bg-black my-0">
+        <!-- Container for displaying beers -->
         <div class="col-12 col-xl-8 d-flex flex-wrap justify-content-center my-3 mx-auto">
             {% if beers %}
             {% for beer in beers %}
             <div class="col-12 col-sm-6 col-md-4 d-flex d-flex-column h-100 product-container p-0 mb-4">
                 <a href="{% url 'beer_detail' beer.id %}" class="text-black hover-gray mx-4">
                     <div class="card border-0 align-items-center">
+                        <!-- Display beer image or default image -->
                         {% if beer.image %}
                         <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
                         {% else %}
@@ -33,23 +37,26 @@
             </div>
             {% endfor %}
             {% else %}
+            <!-- Message when no beers found -->
             <p>No beers found.</p>
             {% endif %}
         </div>
     </div>
 </div>
 
-
+<!-- Merchandise Section -->
 <div class="overflow-hidden position-relative pb-4" id="merch-section">
     <div class="text-center text-uppercase col-12" id="merch-content">
         <h3 class="mb-3">Merch</h3>
         <hr class="bg-black my-0">
+        <!-- Container for displaying merchandise items -->
         <div class="col-12 col-xl-8 d-flex flex-wrap justify-content-center my-3 mx-auto">
             {% if merch_items %}
             {% for merch_item in merch_items %}
             <div class="col-12 col-sm-6 col-md-4 d-flex d-flex-column h-100 product-container p-0 mb-4">
                 <a href="{% url 'merch_detail' merch_item.id %}" class="text-black hover-gray mx-4">
                     <div class="card border-0 align-items-center">
+                        <!-- Display merchandise image or default image -->
                         {% if merch_item.image %}
                         <img src="{{ merch_item.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
                         {% else %}
@@ -65,6 +72,7 @@
             </div>
             {% endfor %}
             {% else %}
+            <!-- Message when no merchandise items found -->
             <p>No merchandise found.</p>
             {% endif %}
         </div>
