Added comment and docstrings to pages and profiles apps

--- a/pages/templates/pages/taproom.html
+++ b/pages/templates/pages/taproom.html
@@ -5,12 +5,14 @@
 
 {% block content %}
 <div class="overflow-hidden position-relative hero-section">
+    <!-- Hero section with background image -->
     <img src="/static/images/taproom/taproom-hero.jpg" alt="Taproom Hero Image" class="h-100 w-100 hero-image">
     <div class="position-absolute h-100 w-100"></div>
 </div>
 
 <div class="overflow-hidden position-relative py-4 bg-gray info-section">
     <div class="text-center col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3 info-content">
+        <!-- Taproom introduction -->
         <h3 class="mb-3 text-uppercase">Visit Our Taproom</h3>
         <hr class="bg-black my-0">
         <div class="d-flex justify-content-center mt-3">
@@ -27,6 +29,7 @@
 </div>
 
 <div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content gallery-section">
+    <!-- Gallery section with taproom images -->
     <img src="/static/images/taproom/taproom4.jpg" alt="Taproom Image 4"
         class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 gallery-image">
     <img src="/static/images/taproom/taproom5.jpg" alt="Taproom Image 5"
@@ -37,6 +40,7 @@
 
 <div class="overflow-hidden position-relative py-4 info-section">
     <div class="text-center col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3 info-content">
+        <!-- Taproom opening times -->
         <h3 class="mb-3 text-uppercase">Taproom Opening Times</h3>
         <hr class="bg-black my-0">
         <div class="d-flex justify-content-center mt-3">
@@ -57,6 +61,7 @@
     <div class="container-fluid p-0 m-0">
         <div class="row align-items-center">
             <div class="col-12 col-md-6 order-md-2 text-center p-0 align-content-center" id="taproom-address">
+                <!-- Taproom address and directions -->
                 <h3 class="mb-3 text-uppercase">Pop In</h3>
                 <hr class="bg-black my-0">
                 <div class="my-3">
@@ -68,6 +73,7 @@
                 <a class="btn-gray" href="https://www.google.com/maps/dir//Huddersfield+HD1+1AA/@53.6484851,-1.783857,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x487bdc6d785bda05:0x6e7062a6902701f4!2m2!1d-1.7815455!2d53.6484382!3e0?entry=ttu" target="_blank">Get Directions</a>
             </div>
             <div class="col-12 col-md-6 order-md-1 p-0">
+                <!-- Google Maps iframe showing location -->
                 <div class="p-0" id="map-content">
                     <iframe width="100%" height="500" frameborder="0" class="border-0"
                         referrerpolicy="no-referrer-when-downgrade"
