--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -5,12 +5,14 @@
 
 {% block content %}
 <div class="overflow-hidden position-relative hero-section">
+  <!-- Hero section with background image -->
   <img src="/static/images/about/about-hero.jpg" alt="About Hero Image" class="h-100 w-100 hero-image">
   <div class="position-absolute h-100 w-100"></div>
 </div>
 
 <div class="overflow-hidden position-relative py-4 bg-gray info-section">
     <div class="text-center col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3 info-content">
+      <!-- Introduction to the brewery's story -->
       <h3 class="mb-3 text-uppercase">Our Story</h3>
       <hr class="bg-black my-0">
       <div class="mt-3">
@@ -25,12 +27,14 @@
   </div>
 
   <div class="overflow-hidden position-relative hero-section">
+    <!-- Second hero section with background image -->
     <img src="/static/images/about/about1.jpg" alt="About Image 1" class="h-100 w-100 hero-image">
     <div class="position-absolute h-100 w-100"></div>
   </div>
   
   <div class="overflow-hidden position-relative py-4 bg-gray info-section">
       <div class="text-center col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3 info-content">
+        <!-- Continued story -->
         <h3 class="mb-3 text-uppercase">From Garage to Greatness</h3>
         <hr class="bg-black my-0">
         <div class="mt-3">
@@ -45,6 +49,7 @@
     </div>
 
 <div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content gallery-section">
+  <!-- Gallery section with images -->
   <img src="/static/images/about/about2.jpg" alt="About Image 2"
     class="h-100 d-inline-block col-6 mx-0 px-0 gallery-image">
   <img src="/static/images/about/about3.jpg" alt="About Image 3"
@@ -53,6 +58,7 @@
 
 <div class="overflow-hidden position-relative py-4 product-section">
   <div class="text-center text-uppercase col-12 product-content">
+    <!-- Display random beers -->
     <h3 class="mb-3">Check Out Our Beers</h3>
     <hr class="bg-black my-0">
     <div class="col-12 col-lg-8 d-flex flex-wrap flex-lg-nowrap justify-content-center mt-3 mx-auto">
