--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block additional_css %}
+    <!-- Load custom CSS specific to the profile page -->
     <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
 {% endblock %}
 
@@ -16,6 +17,7 @@
         </div>
     </div>
     <div class="row mt-3">
+        <!-- Order History Section -->
         <div class="col-12 col-lg-6 order-lg-last px-4 mb-3 pl-lg-0">
             <p class="text-uppercase px-4">Order History</p>
             <div class="order-history table-responsive px-3">
@@ -61,6 +63,8 @@
                 </table>
             </div>
         </div>
+
+        <!-- Default Delivery Information Section -->
         <div class="col-12 col-lg-6 px-4 pr-lg-0">
             <p class="text-uppercase px-4">Default Delivery Information</p>
             <form action="{% url 'profile' %}" method="POST" class="mt-3 px-3" id="profile-update-form">
@@ -70,11 +74,11 @@
             </form>
         </div>
     </div>
-    {{ profile }}
 </div>
 {% endblock %}
 
 {% block end_js %}
     {{ block.super }}
+    <!-- Load additional JavaScript -->
     <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
