Added additional comments

--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,3 +1,4 @@
+<!-- Toast template is a modified version of Boutique Ado project code -->
 <div class="toast rounded-0 border-info ml-auto" data-autohide="false">
     <div class="toast-header bg-white text-black text-uppercase">
         <strong class="mr-auto">Alert!</strong>
