Fixed some spelling errors

--- a/pages/templates/pages/taproom.html
+++ b/pages/templates/pages/taproom.html
@@ -21,7 +21,7 @@
                 our taproom offers a cosy, welcoming atmosphere where you can enjoy our finely crafted ales right from
                 the source. Experience the magic of our brews, meet fellow beer enthusiasts, and immerse yourself in the
                 alchemical spirit that defines us. Whether you're a regular or a first-time visitor, our taproom is the
-                perfect place to relax, socialize, and savour the unique flavours of our creations. Come join us and
+                perfect place to relax, socialise, and savour the unique flavours of our creations. Come join us and
                 discover your new favourite brew!
             </p>
         </div>
