--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -28,9 +28,9 @@
               <img class="img-fluid rounded" src="{{ item.product.image.url }}">
               {% else %}
                 {% if item.item_type == 'beer' %}
-                <img src="{{ MEDIA_URL }}beers/no_beer.webp" class="img-fluid rounded">
+                <img src="{{ MEDIA_URL }}beers/no-beer.webp" class="img-fluid rounded">
                 {% elif item.item_type == 'merch' %}
-                <img src="{{ MEDIA_URL }}merch/no_merch.webp" class="img-fluid rounded">
+                <img src="{{ MEDIA_URL }}merch/no-merch.webp" class="img-fluid rounded">
                 {% endif %}
               {% endif %}
             </td>
