--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -42,10 +42,10 @@
                                 {% else %}
                                 {% if item.item_type == 'beer' %}
                                 <!-- Display default beer image if no image available -->
-                                <img src="{{ MEDIA_URL }}beers/no_beer.webp" class="img-fluid rounded">
+                                <img src="{{ MEDIA_URL }}beers/no-beer.webp" class="img-fluid rounded">
                                 {% elif item.item_type == 'merch' %}
                                 <!-- Display default merchandise image if no image available -->
-                                <img src="{{ MEDIA_URL }}merch/no_merch.webp" class="img-fluid rounded">
+                                <img src="{{ MEDIA_URL }}merch/no-merch.webp" class="img-fluid rounded">
                                 {% endif %}
                                 {% endif %}
                             </td>
