--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -27,7 +27,7 @@
           {% if beer.image %}
           <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
           {% else %}
-          <img src="{{ MEDIA_URL }}beers/no_beer.webp" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
+          <img src="{{ MEDIA_URL }}beers/no-beer.webp" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
           {% endif %}
           <div class="card-body p-0">
             <h5 class="card-title my-0">{{ beer.name }}</h5>
@@ -82,7 +82,7 @@
           {% if merch_item.image %}
           <img src="{{ merch_item.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
           {% else %}
-          <img src="{{ MEDIA_URL }}merch/no_merch.webp" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
+          <img src="{{ MEDIA_URL }}merch/no-merch.webp" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
           {% endif %}
           <div class="card-body p-0">
             <h5 class="card-title my-0">{{ merch_item.name }}</h5>
