--- a/inventory/templates/inventory/merch_detail.html
+++ b/inventory/templates/inventory/merch_detail.html
@@ -14,7 +14,7 @@
           {% if merch.image %}
           <img src="{{ merch.image.url }}" class="card-img-top border-black large-product-image" alt="{{ merch.name }}">
           {% else %}
-          <img src="{{ MEDIA_URL }}merch/no_merch.webp" class="card-img-top border-black large-product-image"
+          <img src="{{ MEDIA_URL }}merch/no-merch.webp" class="card-img-top border-black large-product-image"
             alt="{{ merch.name }}">
           {% endif %}
         </div>
@@ -95,7 +95,7 @@
             <img src="{{ merch.image.url }}" class="card-img-top border-black my-2 product-image"
               alt="{{ merch.name }}">
             {% else %}
-            <img src="{{ MEDIA_URL }}merch/no_merch.webp" class="card-img-top border-black my-2 product-image"
+            <img src="{{ MEDIA_URL }}merch/no-merch.webp" class="card-img-top border-black my-2 product-image"
               alt="{{ merch.name }}">
             {% endif %}
             <div class="card-body p-0">
